# Dog-Mono-Repo

./: CMakeLists.txt  README.md
Modules/Converters/: CMakeLists.txt
Modules/Converters/include/: F1_2022_ct_converter.h  F1_2022_f1_converter.h
Modules/Converters/src/: F1_2022_ct_converter.cpp  F1_2022_f1_converter.cpp
Modules/ConvertersCsInterface/: CMakeLists.txt
Modules/ConvertersCsInterface/include/: F1_2022_ct_converter_wrapper.h
Modules/ConvertersCsInterface/src/: F1_2022_ct_converter_wrapper.cpp
Modules/Crypto/: CMakeLists.txt
Modules/Crypto/include/: Hash.h
Modules/Crypto/proposalCode/: main.c  sha1.c  sha1.h
Modules/Crypto/src/: Hash.cpp
Modules/Crypto/test/: HashTest.cpp
Modules/Database/: CMakeLists.txt
Modules/Database/include/: AbstractEntity.h  Database.h  DatabaseBuilder.h  PrepareStatement.h  QueryBuilder.h  ResultIterator.h  Table.h
Modules/Database/manualTest/: rwTest.cpp
Modules/Database/src/: AbstractEntity.cpp  Database.cpp  DatabaseBuilder.cpp  PrepareStatement.cpp  QueryBuilder.cpp
Modules/Database/test/: DatabaseBuilderTest.cpp  DatabaseTest.cpp  QueryBuilderTest.cpp
Modules/EventSystem/: CMakeLists.txt
Modules/EventSystem/include/: AbstractEvent.h  EventManager.h  EventParam.h
Modules/EventSystem/src/: EventManager.cpp  EventParam.cpp
Modules/F1GameParserGenerator/: CMakeLists.txt
Modules/F1GameParserGenerator/F1Spec/: 2021.json  2022.json
Modules/F1GameParserGenerator/include/: F1Spec.h  F1SpecBuilder.h  F1SpecValidator.h  Fields.h  Packages.h  ParserGenerator.h
Modules/F1GameParserGenerator/src/: F1Spec.cpp  F1SpecBuilder.cpp  F1SpecValidator.cpp  Fields.cpp  Packages.cpp  ParserGenerator.cpp  main.cpp
Modules/F1GameParserGenerator/template/: CMakeListsTemplate.txt  ConverterTemplate.cpp  ConverterTemplate.h  ExceptionTemplate.cpp  ExceptionTemplate.h  F1DataClassTemplate.cpp  F1DataClassTemplate.h  F1DataEntityTemplate.cpp  F1DataEntityTemplate.h  RecorderTemplate.cpp  RecorderTemplate.h
Modules/F1GameParserGenerator/test/: F1SpecBuilderTest.cpp
Modules/F1_2022/: CMakeLists.txt
Modules/F1_2022/include/: F1_2022_ct_converter.h  F1_2022_f1_converter.h  Recorder_2022.h
Modules/F1_2022/src/: F1DataEntity_2022.cpp  F1_2022_ct_converter.cpp  F1_2022_f1_converter.cpp  Recorder_2022.cpp
Modules/Image/: CMakeLists.txt
Modules/Image/include/: Image.h
Modules/Image/src/: Image.cpp
Modules/Image/test/: ImageTest.cpp
Modules/Json/: CMakeLists.txt
Modules/Json/include/: AbstractType.h  JsonParser.h  PropertyType.h  ValueType.h
Modules/Json/src/: AbstractType.cpp  JsonParser.cpp  PropertyType.cpp  ValueType.cpp
Modules/Json/test/: ParseJsonTest.cpp
Modules/Logger/: CMakeLists.txt
Modules/Logger/include/: AbstractOutput.h  ConsoleOutput.h  FileOutput.h  Logger.h
Modules/Logger/src/: ConsoleOutput.cpp  FileOutput.cpp  Logger.cpp
Modules/Math/: CMakeLists.txt
Modules/Math/include/: BoundingBox2dAABB.h  BoundingBox3dAABB.h  Image.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Ray.h  SquareMatrix.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Modules/Math/src/: BoundingBox2dAABB.cpp  BoundingBox3dAABB.cpp  Image.cpp  Matrix.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Ray.cpp  SquareMatrix.cpp  Vector.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Modules/Math/test/: BoundingBox2dAABBTest.cpp  Matrix2Test.cpp  Matrix3Test.cpp  Matrix4Test.cpp  MatrixTest.cpp  SquareMatrixTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorTest.cpp
Modules/Network/: CMakeLists.txt
Modules/Network/include/: AbstractClient.h  AbstractNetwork.h  AbstractServer.h  ClientConnection.h  HttpHeader.h  HttpRequest.h  HttpResponse.h  NetworkUtility.h  TcpClient.h  TcpServer.h  UdpClient.h  UdpServer.h  WsClient.h  WsClientConnection.h  WsServer.h
Modules/Network/src/: AbstractClient.cpp  AbstractNetwork.cpp  AbstractServer.cpp  ClientConnection.cpp  HttpRequest.cpp  HttpResponse.cpp  NetworkUtility.cpp  TcpClient.cpp  TcpServer.cpp  UdpClient.cpp  UdpServer.cpp  WsClient.cpp  WsClientConnection.cpp  WsServer.cpp
Modules/Network/test/: HttpRequestTest.cpp  NetworkUtilityTest.cpp  WebsocketTest.cpp
Modules/Recorders/: CMakeLists.txt
Modules/Recorders/include/: AssettoCorsaCompatizioneDataObjects.h  AssettoCorsaCompatizioneRecorder.h  AssettoCorsaRecorder.h
Modules/Recorders/src/: AssettoCorsaCompatizioneRecorder.cpp  AssettoCorsaRecorder.cpp
Modules/StateMachine/: CMakeLists.txt
Modules/StateMachine/include/: EmptyState.h  StateMachine.h  StateMachineStateInterface.h  Transition.h
Modules/StateMachine/src/: EmptyState.cpp  StateMachine.cpp  StateMachineStateInterface.cpp
Modules/StateMachine/test/: EmptyStateTest.cpp  StateMachineTest.cpp  TransitionTest.cpp
Modules/StateMachineCs/: CMakeLists.txt
Modules/StateMachineCs/src/: EmptyState.cs  StateMachine.cs  StateMachineStateInterface.cs  Transition.cs
Modules/StateMachineCs/test/: StateMachineTest.cs
Modules/TelemetryConverter/: CMakeLists.txt
Modules/TelemetryConverter/config/: F1_2022_Converter_Settings1.json  F1_2022_Converter_Settings2.json
Modules/TelemetryConverter/src/: main.cpp
Modules/TelemetryInterfaces/: CMakeLists.txt
Modules/TelemetryInterfaces/include/: AbstractRecorderInterface.h  ConverterInterface.h  ProducerConsumerRecorder.h  RecordState.h
Modules/TelemetryInterfaces/src/: ProducerConsumerRecorder.cpp  RecordState.cpp
Modules/TelemetryRecorder/: CMakeLists.txt
Modules/TelemetryRecorder/src/: AccRecorder.cpp  AccRecorder.h  main.cpp
Modules/TelemetryWsServer/: CMakeLists.txt
Modules/TelemetryWsServer/include/: AbstractCommand.h  CommandParser.h  CommandProcessor.h  ConvertCommand.h  ConvertOptionsCommand.h  TelemetryController.h
Modules/TelemetryWsServerCs/: CMakeLists.txt  TelemetryWsServerCs.csproj
Modules/Tree/: CMakeLists.txt
Modules/Tree/include/: AbstractTree.h  (+8 more)
Modules/Utility/: CMakeLists.txt
Modules/WebsocketClient/: CMakeLists.txt
Modules/Window/: CMakeLists.txt
Modules/telemetry-recorder-rs/: Cargo.toml
Modules/telemetry-ws-server-rs/: Cargo.toml
(+391 files in other folders)
