[package]
name = "telemetry-recorder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.2"
sqlite = "0.31.1"
sqlite3-sys = "0.15.2"
acc-shared-memory = {path = "../acc-shared-memory"}
fastrand = "2.0.1"
libc = "0.2.149"
ctrlc = "3.4.1"