[package]
name = "telemetry-ws-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
sqlite = "0.30.3"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1.0.0", default-features = false, features = ["full"] }
env_logger = "0.9"
serde_json = "1.0"
state-machine-rs = {path = "../state-machine-rs"}
acc-shared-memory = {path = "../acc-shared-memory"}